# simple_gopher

./: .gitignore  CMakeLists.txt  README.md  server.c
build_win/home/: conf.ini
libs/: CMakeLists.txt
libs/include/: info.h  io_wrap.h  log_client.h  multiplx.h  socket_wrap.h  srvsize.h  stdconf.h  stdgopher.h  stdlog.h  stdsignal.h  stdsocket.h  stdthread.h
libs/src/: socket_wrap.c  stdconf.c  stdgopher.c  stdlog.c  stdsocket.c
libs/src_nix/: io_wrap.c  log_client.c  multiplx.c  stdsignal.c  stdthread.c
libs/src_win/: io_wrap.c  log_client.c  multiplx.c  stdsignal.c  stdthread.c
linux/: CMakeLists.txt
linux/include/: daemonize.h
linux/src/: daemonize.c
windows/: CMakeLists.txt
windows/include/: wingetopt.h
windows/src/: client_logger.c  subserver.c  wingetopt.c
